增加LeetCode460. LFU 缓存, 优化 146. LRU 缓存 代码