@@ -5,30 +5,27 @@ LeetCode参考: https://leetcode.cn/problems/lru-cache/solutions/259678/lruhuan-
 */
 
 import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
 import java.util.Map;
 
 // 实现方式达不到题目要求的get和put都是O(1)，得自己控制双向链表才能达到O(1)，不过能过LeetCode
 public class Solution146 {
-    List<int[]> buffer; // 数组0为key, 1为value
     int capacity;
-    Map<Integer, int[]> map;
+    Map<Integer, Node> map;
+    DoubleLinkedList list;
 
     // 粘贴到LeetCode上需将这个方法名改为LRUCache
     public Solution146(int capacity) {
         this.capacity = capacity;
-        buffer = new LinkedList<>();
         this.map = new HashMap<>();
+        this.list = new DoubleLinkedList();
     }
 
     public int get(int key) {
         if (map.containsKey(key)) {
-            int[] temp = map.get(key);
-            buffer.remove(temp); // 这里没法O(1)，得自己控制双向链表才能达到O(1)
-            buffer.add(temp); // 最近用过，将其移到最后
-            map.put(temp[0], temp);
-            return temp[1];
+            Node node = map.get(key);
+            list.remove(node);
+            list.addAsFirst(node); // 最近用过，将其移到最前
+            return node.val;
         }
         else {
             return -1;
@@ -37,27 +34,77 @@ public class Solution146 {
 
     public void put(int key, int value) {
         if (map.containsKey(key)) {
-            int[] temp = map.get(key);
-            buffer.remove(temp);
-            temp[1] = value;
-            buffer.add(temp);
+            Node node = map.get(key);
+            list.remove(node);
+            list.addAsFirst(node);
+            node.val = value;
             return;
         }
         // 不存在key, 不需淘汰
-        if (buffer.size() < capacity) {
-            int[] newCache = new int[]{key, value};
-            buffer.add(newCache);
-            map.put(key, newCache);
+        if (list.size() < capacity) {
+            Node node = new Node(key, value);
+            list.addAsFirst(node);
+            map.put(key, node);
             return;
         }
         // 不存在key, 需要淘汰
-        int[] removed = buffer.remove(0);
-        map.remove(removed[0]);
-        int[] newCache = new int[]{key, value};
-        buffer.add(newCache);
-        map.put(key, newCache);
+        Node removed = list.removeLast();
+        map.remove(removed.key);
+        Node node = new Node(key, value);
+        list.addAsFirst(node);
+        map.put(key, node);
     }
 
     public static void main(String[] args) {
     }
+}
+
+class Node {
+    Node prev;
+    Node next;
+    int key, val;
+
+    public Node(int key, int val) {
+        this.key = key;
+        this.val = val;
+    }
+}
+
+class DoubleLinkedList {
+    Node dummyHead, dummyTail;
+    private int size;
+
+    public DoubleLinkedList() {
+        this.dummyHead = new Node(-1, -1);
+        this.dummyTail = new Node(-1, -1);
+        dummyHead.next = dummyTail;
+        dummyTail.prev = dummyHead;
+        size = 0;
+    }
+
+    public void remove(Node node) {
+        node.prev.next = node.next;
+        node.next.prev = node.prev;
+        size--;
+    }
+
+    public Node removeLast() {
+        Node node = dummyTail.prev;
+        this.remove(node);
+        return node;
+    }
+
+    public void addAsFirst(Node node) { // 加到头部
+        Node temp = dummyHead.next;
+        dummyHead.next = node;
+        node.prev = dummyHead;
+        temp.prev = node;
+        node.next = temp;
+        size++;
+    }
+
+    public int size() {
+        return this.size;
+    }
+
 }
